--- a/research/03_model_trainer.ipynb
+++ b/research/03_model_trainer.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-End-Chest-Cancer-Classification-using-MLflow-DVC\\\\research'"
+       "'f:\\\\End_to_end_chest_cancer_classification\\\\research'"
       ]
      },
      "execution_count": 2,
@@ -46,7 +46,7 @@
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Bappy\\\\YouTube\\\\End-to-End-Chest-Cancer-Classification-using-MLflow-DVC'"
+       "'f:\\\\End_to_end_chest_cancer_classification'"
       ]
      },
      "execution_count": 4,
@@ -242,21 +242,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-11-19 10:05:04,593: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-11-19 10:05:04,603: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-11-19 10:05:04,605: INFO: common: created directory at: artifacts]\n",
-      "[2023-11-19 10:05:04,606: INFO: common: created directory at: artifacts\\training]\n",
+      "[2024-05-27 22:56:58,983: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-05-27 22:56:59,008: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-05-27 22:56:59,012: INFO: common: created directory at: artifacts]\n",
+      "[2024-05-27 22:56:59,015: INFO: common: created directory at: artifacts\\training]\n",
       "Found 68 images belonging to 2 classes.\n",
       "Found 275 images belonging to 2 classes.\n",
-      "17/17 [==============================] - 31s 2s/step - loss: 14.9583 - accuracy: 0.5097 - val_loss: 17.5577 - val_accuracy: 0.6094\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Softwares\\anaconda3\\envs\\chest\\lib\\site-packages\\keras\\src\\engine\\training.py:3000: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
-      "  saving_api.save_model(\n"
+      "17/17 [==============================] - 323s 19s/step - loss: 15.5327 - accuracy: 0.5135 - val_loss: 8.9332 - val_accuracy: 0.3906\n"
      ]
     }
    ],
@@ -297,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.17"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
